--- a/driverfeature/src/main/res/layout/activity_booking.xml
+++ b/driverfeature/src/main/res/layout/activity_booking.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -56,25 +58,29 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="204dp"
         android:text="Space Tag"
-        app:layout_constraintBottom_toTopOf="@+id/Reserve"
+        app:layout_constraintBottom_toTopOf="@+id/button_reserve"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/Reserve"
+        android:id="@+id/button_reserve"
         android:layout_width="344dp"
         android:layout_height="36dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="116dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="100dp"
         android:background="#00BCD4"
         android:foregroundTint="#673AB7"
         android:text="Reserve"
         android:textColor="#FFFFFF"
+        android:onClick="reserveSecondActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        />
+
 
     <EditText
         android:id="@+id/editText2"
@@ -110,7 +116,7 @@
         android:layout_marginBottom="200dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        app:layout_constraintBottom_toTopOf="@+id/Reserve"
+        app:layout_constraintBottom_toTopOf="@+id/button_reserve"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView5" />
@@ -125,13 +131,5 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editText3"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="175dp"
-        tools:layout_editor_absoluteY="482dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
