--- a/driverfeature/src/main/res/layout/fragment_google_map.xml
+++ b/driverfeature/src/main/res/layout/fragment_google_map.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".GoogleMapFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+
 
 </FrameLayout>
