--- a/driverfeature/src/main/res/layout/bottom_sheet_parkings_layout.xml
+++ b/driverfeature/src/main/res/layout/bottom_sheet_parkings_layout.xml
@@ -5,65 +5,71 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:padding="16dp"
     >
 
+   <androidx.cardview.widget.CardView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       app:cardBackgroundColor="@color/cardview_shadow_start_color"
+       >
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="horizontal">
+
+           <ImageView
+               android:id="@+id/imageDialog"
+               android:layout_width="171dp"
+               android:layout_height="132dp"
+               android:layout_marginTop="15dp"
+               android:layout_marginBottom="10dp"
+               android:layout_marginEnd="10dp"
+               android:layout_marginStart="10dp"
+               tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:orientation="vertical">
+
+               <TextView
+                   android:id="@+id/nameDialog"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="10dp"
+                   android:textSize="15sp"
+                   android:textStyle="bold"
+                   android:text="Nombre"
+                   />
+
+               <TextView
+                   android:id="@+id/descriptionDialog"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="10dp"
+                   android:text="Esto es una descripcion de prueba"
+                   />
+
+               <Button
+                   android:id="@+id/btnBottomSheetDialog"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="15dp"
+                   android:background="@color/colorDialog"
+                   android:textSize="10dp"
+                   android:text="Descripcion"
+                   />
+
+           </LinearLayout>
 
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="171dp"
-            android:layout_height="132dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/common_google_signin_btn_icon_light_focused"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+       </LinearLayout>
 
+   </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:text="Nombre"
-                />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Esto es una descripcion de prueba"
-                />
-
-            <Button
-                android:id="@+id/btnBottomSheetDialog"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Button"
-                />
-
-        </LinearLayout>
-
-
-
-
-    </LinearLayout>
 
 
 
