--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/map"
-        android:name="com.example.driverfeature.GoogleMapFragment"
+        android:name="com.example.myapplication.ui.Fragments.GoogleMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
