--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -29,7 +29,7 @@
         android:text="Email"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/perfilEmail"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/labelPerfilName" />
 
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
 
+        android:layout_marginEnd="80dp"
         android:text="TextView"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
 
+        android:layout_marginEnd="80dp"
         android:text="TextView"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +66,7 @@
         android:text="Name"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/perfilName"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
@@ -77,7 +79,7 @@
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/passwordPerfil"
 
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/labelPerfilEmail" />
 
@@ -87,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
 
+        android:layout_marginEnd="40dp"
         android:inputType="textPassword"
         android:text="TextViewasdsadasd"
         android:textSize="20dp"
