--- a/driverfeature/src/main/res/layout/fragment_google_map.xml
+++ b/driverfeature/src/main/res/layout/fragment_google_map.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GoogleMapFragment">
+    tools:context="com.example.myapplication.ui.Fragments.GoogleMapFragment">
 
     <fragment
         android:id="@+id/map"
