--- a/driverfeature/src/main/res/layout/item_bookings.xml
+++ b/driverfeature/src/main/res/layout/item_bookings.xml
@@ -53,7 +53,7 @@
             app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
             app:layout_constraintStart_toStartOf="parent"
             android:textSize="15dp"
-            android:text="More"/>
+            android:text="Ir"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
