--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -72,7 +72,7 @@
         android:layout_marginEnd="32dp"
         android:background="@color/colorPrimary"
 
-        android:text="@string/button"
+        android:text="register"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
