--- a/app/src/main/res/layout/fragment_car.xml
+++ b/app/src/main/res/layout/fragment_car.xml
@@ -1,63 +1,70 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="?android:actionBarSize"
+    tools:context=".ui.Fragments.CarFragment">
+
+
+
+    <androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".CarFragment">
+    android:layout_margin="10dp"
+    app:cardElevation="4dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <ImageView
-            android:id="@+id/foto"
+            android:id="@+id/pictureImageView"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:scaleType="fitXY" />
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/auto1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txtTitle"
+            android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:textSize="25sp"
-            android:layout_below="@id/foto"/>
-        <TextView
-            android:id="@+id/txtCount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textSize="25sp"
-            android:layout_below="@id/txtTitle"/>
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_vert_black_24dp"
             android:layout_marginTop="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/foto"
-            />
+            android:text="Placa : VHI-215"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/pictureImageView" />
 
-        <com.google.android.gms.plus.PlusOneButton
-            android:id="@+id/plus_one_button"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/descriptionTextView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            plus:annotation="inline"
-            plus:size="standard">
+            android:layout_marginTop="10dp"
+            android:text="Marca: Toyota"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
 
-        </com.google.android.gms.plus.PlusOneButton>
-
-
-
-
-
-
-    </RelativeLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
 
 
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.cardview.widget.CardView>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
